--- a/template/index.pug
+++ b/template/index.pug
@@ -102,7 +102,7 @@ html(lang="en")
       });
       participantNumChart.setOption({
         title: {
-          text: '参赛人数分布'
+          text: '参赛次数分布'
         },
         xAxis: {
           data: !{participantTimes}
