Finished match info query
Change-Id: I5b04e1cc0d9e5798553d72b8cf7c522f4ed3ba29

--- a/template/index.pug
+++ b/template/index.pug
@@ -41,7 +41,7 @@ html(lang="en")
           p.text-center(style="margin-top:10px") #{months[index]}月赛冠军--#{champion.name}
       .panel.panel-default
         .panel-heading 数据统计
-        .panel-body 累计参赛人数 #{totalNum} 累计参赛人次 #{partcipantNum}
+        .panel-body 累计参赛人次 #{totalNum} 累计参赛人数 #{partcipantNum}
         #participant.chart-container
         #participant-num.chart-container
         #personal-best.chart-container
